--- a/frontend/src/styles/PhotoFavButton.scss
+++ b/frontend/src/styles/PhotoFavButton.scss
@@ -10,6 +10,7 @@
   height: 32px;
   text-align: center;
   border-radius: 100%;
+  transition: background-color 0.3s ease;
 }
 
 .photo-list__fav-icon-svg {
